src/output.css
/* ... */
@layer utilities {
  .absolute {
    position: absolute;
  }
  .relative {
    position: relative;
  }
  .top-0 {
    top: calc(var(--spacing) * 0);
  }
  .-right-72 {
    right: calc(var(--spacing) * -72);
  }
  .bottom-0 {
    bottom: calc(var(--spacing) * 0);
  }
  .-left-72 {
    left: calc(var(--spacing) * -72);
  }
  .left-0 {
    left: calc(var(--spacing) * 0);
  }
  .mx-5 {
    margin-inline: calc(var(--spacing) * 5);
  }
  .my-5 {
    margin-block: calc(var(--spacing) * 5);
  }
  .mt-2 {
    margin-top: calc(var(--spacing) * 2);
  }
  .mb-6 {
    margin-bottom: calc(var(--spacing) * 6);
  }
  .mb-10 {
    margin-bottom: calc(var(--spacing) * 10);
  }
  .mb-12 {
    margin-bottom: calc(var(--spacing) * 12);
  }
  .mb-20 {
    margin-bottom: calc(var(--spacing) * 20);
  }
  .mb-28 {
    margin-bottom: calc(var(--spacing) * 28);
  }
  .contents {
    display: contents;
  }
  .flex {
    display: flex;
  }
  .hidden {
    display: none;
  }
  .inline-block {
    display: inline-block;
  }
  .h-10 {
    height: calc(var(--spacing) * 10);
  }
  .h-16 {
    height: calc(var(--spacing) * 16);
  }
  .h-full {
    height: 100%;
  }
  .w-3xs {
    width: var(--container-3xs);
  }
  .w-10 {
    width: calc(var(--spacing) * 10);
  }
  .w-16 {
    width: calc(var(--spacing) * 16);
  }
  .w-full {
    width: 100%;
  }
  .w-screen {
    width: 100vw;
  }
  .max-w-64 {
    max-width: calc(var(--spacing) * 64);
  }
  .items-center {
    align-items: center;
  }
  .justify-between {
    justify-content: space-between;
  }
  .justify-center {
    justify-content: center;
  }
  .gap-7 {
    gap: calc(var(--spacing) * 7);
  }
  .gap-8 {
    gap: calc(var(--spacing) * 8);
  }
  .gap-32 {
    gap: calc(var(--spacing) * 32);
  }
  .overflow-hidden {
    overflow: hidden;
  }
  .overflow-x-hidden {
    overflow-x: hidden;
  }
  .rounded-lg {
    border-radius: var(--radius-lg);
  }
  .rounded-xl {
    border-radius: var(--radius-xl);
  }
  .bg-bg-body {
    background-color: var(--color-bg-body);
  }
  .bg-neutral-200 {
    background-color: var(--color-neutral-200);
  }
  .bg-orange-500 {
    background-color: var(--color-orange-500);
  }
  .bg-white {
    background-color: var(--color-white);
  }
  .px-10 {
    padding-inline: calc(var(--spacing) * 10);
  }
  .pt-10 {
    padding-top: calc(var(--spacing) * 10);
  }
  .pb-14 {
    padding-bottom: calc(var(--spacing) * 14);
  }
  .text-center {
    text-align: center;
  }
  .text-2xl {
    font-size: var(--text-2xl);
    line-height: var(--tw-leading, var(--text-2xl--line-height));
  }
  .text-3xl {
    font-size: var(--text-3xl);
    line-height: var(--tw-leading, var(--text-3xl--line-height));
  }
  .text-base {
    font-size: var(--text-base);
    line-height: var(--tw-leading, var(--text-base--line-height));
  }
  .text-lg {
    font-size: var(--text-lg);
    line-height: var(--tw-leading, var(--text-lg--line-height));
  }
  .leading-none {
    --tw-leading: 1;
    line-height: 1;
  }
  .font-black {
    --tw-font-weight: var(--font-weight-black);
    font-weight: var(--font-weight-black);
  }
  .font-medium {
    --tw-font-weight: var(--font-weight-medium);
    font-weight: var(--font-weight-medium);
  }
  .text-neutral-400 {
    color: var(--color-neutral-400);
  }
  .text-neutral-900 {
    color: var(--color-neutral-900);
  }
  .text-white {
    color: var(--color-white);
  }
  .uppercase {
    text-transform: uppercase;
  }
  .opacity-80 {
    opacity: 80%;
  }
  .shadow {
    --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
  }
  .outline {
    outline-style: var(--tw-outline-style);
    outline-width: 1px;
  }
  .outline-transparent {
    outline-color: transparent;
  }
  .drop-shadow-neutral-200 {
    --tw-drop-shadow-color: oklch(92.2% 0 0);
    @supports (color: color-mix(in lab, red, red)) {
      --tw-drop-shadow-color: color-mix(in oklab, var(--color-neutral-200) var(--tw-drop-shadow-alpha), transparent);
    }
    --tw-drop-shadow: var(--tw-drop-shadow-size);
  }
  .transition-colors {
    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to;
    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
    transition-duration: var(--tw-duration, var(--default-transition-duration));
  }
  .transition-opacity {
    transition-property: opacity;
    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
    transition-duration: var(--tw-duration, var(--default-transition-duration));
  }
  .duration-500 {
    --tw-duration: 500ms;
    transition-duration: 500ms;
  }
  .hover\:bg-neutral-900 {
    &:hover {
      @media (hover: hover) {
        background-color: var(--color-neutral-900);
      }
    }
  }
  .hover\:text-white {
    &:hover {
      @media (hover: hover) {
        color: var(--color-white);
      }
    }
  }
  .hover\:opacity-70 {
    &:hover {
      @media (hover: hover) {
        opacity: 70%;
      }
    }
  }
  .hover\:outline-neutral-400 {
    &:hover {
      @media (hover: hover) {
        outline-color: var(--color-neutral-400);
      }
    }
  }
  .lg\:block {
    @media (width >= 64rem) {
      display: block;
    }
  }
}
.ff-barlow {
  font-family: "Barlow", sans-serif;
}
.heading-size {
  font-size: 56px;
  min-height: 112px;
}
.w-desktop-1440 {
  width: 100%;
  max-width: 1440px;
}
.w-mobile-375 {
  width: 100%;
  max-width: 375px;
}
.container-1110 {
  width: 100%;
  max-width: 1110px;
}
.wrapper-imgs {
  width: 100%;
  max-width: 730px;
}
.btn-component {
  display: inline-block;
  text-transform: uppercase;
  font-weight: bold;
  padding: 16px 24px;
  border-radius: 6px;
}
.brightness-custom-60 {
  filter: brightness(0.6);
}
/* ... */

